@@ -1,20 +1,20 @@
 Changes
-examples/ex1.pl
-examples/ex10.pl
-examples/ex11.pl
-examples/ex12.pl
-examples/ex13.pl
-examples/ex14.pl
-examples/ex15.pl
-examples/ex16.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
-examples/ex5.pl
-examples/ex6.pl
-examples/ex7.pl
-examples/ex8.pl
-examples/ex9.pl
+examples/check_array_fail.pl
+examples/check_array_object_fail.pl
+examples/check_array_object_ok.pl
+examples/check_array_ok.pl
+examples/check_bool_fail.pl
+examples/check_bool_ok.pl
+examples/check_isa_fail.pl
+examples/check_isa_ok.pl
+examples/check_length_fail.pl
+examples/check_length_ok.pl
+examples/check_number_fail.pl
+examples/check_number_of_items_fail.pl
+examples/check_number_of_items_ok.pl
+examples/check_number_ok.pl
+examples/check_required_fail.pl
+examples/check_required_ok.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
