@@ -1,4 +1,5 @@
 0.11
+ - Rename files in examples/ directory to better names.
 
 0.10 2022-07-28T12:15:19+02:00
  - Add examples for check_bool() to doc.
